Private browsing sessions should not look in keychain for client certificates https://bugs.webkit.org/show_bug.cgi?id=170618 <rdar://problem/18457427>

Patch by Alex Christensen <achristensen@webkit.org> on 2017-04-07
Reviewed by Dan Bernstein.

Source/WebCore:

Our client certificate testing in WebKit leaves much to be desired.
See rdar://problem/17694210 for reproduction steps.

* platform/spi/cf/CFNetworkSPI.h:
Add some new SPI.

Source/WebKit2:

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::configurationForSessionID):

Canonical link: https://commits.webkit.org/187553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215125 268f45cc-cd09-0410-ab3c-d52691b4dbfc